--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,5 +49,9 @@ include_directories(${CMAKE_HOME_DIRECTORY}/include
 add_executable(build-index.x src/build-index.cpp)
 target_link_libraries(build-index.x sdsl pthread divsufsort divsufsort64)
 
+add_executable(create-collection.x src/create-collection.cpp)
+target_link_libraries(create-collection.x sdsl pthread divsufsort divsufsort64)
+
+
 add_executable(query-index-stupid.x src/query-index-stupid.cpp)
 target_link_libraries(query-index-stupid.x sdsl pthread divsufsort divsufsort64)
