--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/sdsl-lite"]
 	path = external/sdsl-lite
 	url = https://github.com/simongog/sdsl-lite.git
+[submodule "external/googletest"]
+	path = external/googletest
+	url = https://git.chromium.org/git/external/googletest.git
