added fast popcnt detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,23 +20,22 @@ else()
 endif()
 if( CMAKE_COMPILER_IS_GNUCXX )
     append_cxx_compiler_flags("-std=c++11 -Wall -Wextra  -DNDEBUG" "GCC" CMAKE_CXX_FLAGS)
-    append_cxx_compiler_flags("-O3 -ffast-math -funroll-loops" "GCC" CMAKE_CXX_FLAGS)
+    append_cxx_compiler_flags("-ffast-math -funroll-loops" "GCC" CMAKE_CXX_FLAGS)
 else()
     append_cxx_compiler_flags("-std=c++11 -DNDEBUG" "CLANG" CMAKE_CXX_FLAGS)
     append_cxx_compiler_flags("-stdlib=libc++" "CLANG" CMAKE_CXX_FLAGS)
-    append_cxx_compiler_flags("-O3 -ffast-math -funroll-loops" "CLANG" CMAKE_CXX_FLAGS)
+    append_cxx_compiler_flags("-ffast-math -funroll-loops" "CLANG" CMAKE_CXX_FLAGS)
 endif()
 include(CheckAVX2)
-if( BUILTIN_INTERLEAVE )
+if( BUILTIN_POPCNT )
     if( CMAKE_COMPILER_IS_GNUCXX )
-        append_cxx_compiler_flags("-msse4.2 -mavx2 -mbmi2" "GCC" CMAKE_CXX_FLAGS)
+        append_cxx_compiler_flags("-msse4.2" "GCC" CMAKE_CXX_FLAGS)
     else()
-        append_cxx_compiler_flags("-msse4.2 -mavx2 -mbmi2" "CLANG" CMAKE_CXX_FLAGS)
+        append_cxx_compiler_flags("-msse4.2" "CLANG" CMAKE_CXX_FLAGS)
     endif()
-    message(STATUS "CPU does support AVX/BMI2.")
-    add_definitions(-DUSE_BUILTIN_INTERLEAVE)
+    message(STATUS "CPU does support fast popcnt.")
 else()
-	message(STATUS "CPU does NOT support AVX/BMI2")
+	message(STATUS "CPU does NOT support fast popcnt")
 endif()
 
 add_subdirectory(external/sdsl-lite)
