--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,12 @@ endif()
 if( CMAKE_COMPILER_IS_GNUCXX )
     append_cxx_compiler_flags("-std=c++11 -Wall -Wextra " "GCC" CMAKE_CXX_FLAGS)
     append_cxx_compiler_flags("-ffast-math -funroll-loops" "GCC" CMAKE_CXX_FLAGS)
+    append_cxx_compiler_flags("-g" "GCC" CMAKE_CXX_FLAGS)
 else()
     append_cxx_compiler_flags("-std=c++11 -Wall" "CLANG" CMAKE_CXX_FLAGS)
     append_cxx_compiler_flags("-stdlib=libc++" "CLANG" CMAKE_CXX_FLAGS)
     append_cxx_compiler_flags("-ffast-math -funroll-loops" "CLANG" CMAKE_CXX_FLAGS)
+    append_cxx_compiler_flags("-g" "CLANG" CMAKE_CXX_FLAGS)
 endif()
 include(CheckAVX2)
 if( BUILTIN_POPCNT )
@@ -54,8 +56,8 @@ target_link_libraries(build-index.x sdsl pthread divsufsort divsufsort64)
 add_executable(create-collection.x src/create-collection.cpp)
 target_link_libraries(create-collection.x sdsl pthread divsufsort divsufsort64)
 
-add_executable(create-byte-collection.x src/create-byte-collection.cpp)
-target_link_libraries(create-byte-collection.x sdsl pthread divsufsort divsufsort64)
+#add_executable(create-byte-collection.x src/create-byte-collection.cpp)
+#target_link_libraries(create-byte-collection.x sdsl pthread divsufsort divsufsort64)
 
 add_executable(query-index-knm.x src/query-index-knm.cpp)
 target_link_libraries(query-index-knm.x sdsl pthread divsufsort divsufsort64)
