--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,9 @@ target_link_libraries(create-collection.x sdsl pthread divsufsort divsufsort64)
 add_executable(query-index-knm.x src/query-index-knm.cpp)
 target_link_libraries(query-index-knm.x sdsl pthread divsufsort divsufsort64)
 
+add_executable(sample.x src/sample.cpp)
+target_link_libraries(sample.x sdsl pthread divsufsort divsufsort64)
+
 add_executable(query-index-stupid.x src/query-index-stupid.cpp)
 target_link_libraries(query-index-stupid.x sdsl pthread divsufsort divsufsort64)
 
