add memory peak and prefix collection stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_subdirectory(external/sdsl-lite)
 
 include_directories(${CMAKE_HOME_DIRECTORY}/include
                     ${CMAKE_HOME_DIRECTORY}/external/googletest/include
+                    ${CMAKE_HOME_DIRECTORY}/external/mem_monitor/
                     ${CMAKE_BINARY_DIR}/external/sdsl-lite/include
                     ${CMAKE_BINARY_DIR}/external/sdsl-lite/external/libdivsufsort/include/
                     ${CMAKE_HOME_DIRECTORY}/external/easyloggingpp/src/
@@ -53,6 +54,9 @@ target_link_libraries(build-index.x sdsl pthread divsufsort divsufsort64)
 
 add_executable(create-collection.x src/create-collection.cpp)
 target_link_libraries(create-collection.x sdsl pthread divsufsort divsufsort64)
+
+add_executable(create-prefix-collection.x src/create-prefix-collection.cpp)
+target_link_libraries(create-prefix-collection.x sdsl pthread divsufsort divsufsort64)
 
 add_executable(query-index-knm.x src/query-index-knm.cpp)
 target_link_libraries(query-index-knm.x sdsl pthread divsufsort divsufsort64)
