--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/easyloggingpp"]
 	path = external/easyloggingpp
 	url = https://github.com/easylogging/easyloggingpp.git
+[submodule "external/mem_monitor"]
+	path = external/mem_monitor
+	url = git@github.com:mpetri/mem_monitor.git
