added namespace and cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,11 +58,11 @@ target_link_libraries(create-collection.x sdsl pthread divsufsort divsufsort64)
 add_executable(query-index-knm.x src/query-index-knm.cpp)
 target_link_libraries(query-index-knm.x sdsl pthread divsufsort divsufsort64)
 
-add_executable(sample.x src/sample.cpp)
-target_link_libraries(sample.x sdsl pthread divsufsort divsufsort64)
+# add_executable(sample.x src/sample.cpp)
+# target_link_libraries(sample.x sdsl pthread divsufsort divsufsort64)
 
-add_executable(query-index-stupid.x src/query-index-stupid.cpp)
-target_link_libraries(query-index-stupid.x sdsl pthread divsufsort divsufsort64)
+# add_executable(query-index-stupid.x src/query-index-stupid.cpp)
+# target_link_libraries(query-index-stupid.x sdsl pthread divsufsort divsufsort64)
 
 add_executable(unit-test.x src/unit-test.cpp)
 target_link_libraries(unit-test.x gtest_main sdsl pthread divsufsort divsufsort64)
