parallel SA construction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,17 +22,19 @@ endif()
 if( CMAKE_COMPILER_IS_GNUCXX )
     append_cxx_compiler_flags("-g -std=c++11 -Wall -Wextra " "GCC" CMAKE_CXX_FLAGS)
     append_cxx_compiler_flags("-ffast-math -funroll-loops" "GCC" CMAKE_CXX_FLAGS)
+    append_cxx_compiler_flags("-fcilkplus" "GCC" CMAKE_CXX_FLAGS)
 else()
     append_cxx_compiler_flags("-g -std=c++11 -Wall" "CLANG" CMAKE_CXX_FLAGS)
     append_cxx_compiler_flags("-stdlib=libc++" "CLANG" CMAKE_CXX_FLAGS)
     append_cxx_compiler_flags("-ffast-math -funroll-loops" "CLANG" CMAKE_CXX_FLAGS)
+    append_cxx_compiler_flags("-fcilkplus" "CLANG" CMAKE_CXX_FLAGS)
 endif()
 include(CheckAVX2)
 if( BUILTIN_POPCNT )
     if( CMAKE_COMPILER_IS_GNUCXX )
-        append_cxx_compiler_flags("-msse4.2" "GCC" CMAKE_CXX_FLAGS)
+        append_cxx_compiler_flags("-msse4.2 -DHAVE_SSE42" "GCC" CMAKE_CXX_FLAGS)
     else()
-        append_cxx_compiler_flags("-msse4.2" "CLANG" CMAKE_CXX_FLAGS)
+        append_cxx_compiler_flags("-msse4.2 -DHAVE_SSE42" "CLANG" CMAKE_CXX_FLAGS)
     endif()
     message(STATUS "CPU does support fast popcnt.")
 else()
