working word2vec integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set(EIGEN3_INCLUDE_DIR ${CMAKE_HOME_DIRECTORY}/external/eigen)
 add_subdirectory(external/dynet)
 
 include_directories(${CMAKE_HOME_DIRECTORY}/include/cstlm/
+                    ${CMAKE_HOME_DIRECTORY}/include/nn/
                     ${CMAKE_HOME_DIRECTORY}/external/dynet
                     ${CMAKE_HOME_DIRECTORY}/external/eigen
                     ${CMAKE_HOME_DIRECTORY}/external/googletest/include
