--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,9 +82,5 @@ add_test(TestsPass unit-test.x)
 
 
 ### NEW HYBRID STUFF
-add_executable(train-nn-index-knm.x src/train-nn-index-knm.cpp)
-target_link_libraries(train-nn-index-knm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
-
-add_executable(train-and-measure-w2v.x src/train-and-measure-w2v.cpp)
-target_link_libraries(train-and-measure-w2v.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
-
+add_executable(train-hyblm.x src/train-hyblm.cpp)
+target_link_libraries(train-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
