--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,14 +105,17 @@ add_executable(build-and-bench-cstlm.x src/build-and-bench-cstlm.cpp)
 
 add_executable(build-and-bench-rnnlm.x src/build-and-bench-rnnlm.cpp)
 
-add_executable(build-and-bench-hyblm.x src/build-and-bench-hyblm.cpp)
+add_executable(build-hyblm.x src/build-hyblm.cpp)
+add_executable(bench-hyblm.x src/bench-hyblm.cpp)
 
 if(CUDA_DYNET)
 target_link_libraries(build-and-bench-rnnlm.x sdsl pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
 target_link_libraries(build-and-bench-cstlm.x sdsl pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
-target_link_libraries(build-and-bench-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
+target_link_libraries(build-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
+target_link_libraries(bench-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
 else()
 target_link_libraries(build-and-bench-cstlm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
 target_link_libraries(build-and-bench-rnnlm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
-target_link_libraries(build-and-bench-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
+target_link_libraries(build-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
+target_link_libraries(bench-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
 endif()
