new binary for cache stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,9 @@ add_executable(build-and-bench-rnnlm.x src/build-and-bench-rnnlm.cpp)
 add_executable(build-hyblm.x src/build-hyblm.cpp)
 add_executable(bench-hyblm.x src/bench-hyblm.cpp)
 
+add_executable(precompute-ngrams.x src/precompute-ngrams.cpp)
+target_link_libraries(precompute-ngrams.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
+
 if(CUDA_DYNET)
 target_link_libraries(build-and-bench-rnnlm.x sdsl pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
 target_link_libraries(build-and-bench-cstlm.x sdsl pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
