--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ add_test(TestsPass unit-test.x)
 #add_executable(train-hyblm.x src/train-hyblm.cpp)
 #target_link_libraries(train-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
 
-remove_cxx_flag("-O3")
+remove_cxx_flag("-O3") # fix for parallel integer SA construction
 add_executable(build-and-bench-cstlm.x src/build-and-bench-cstlm.cpp)
 
 add_executable(build-and-bench-rnnlm.x src/build-and-bench-rnnlm.cpp)
@@ -119,17 +119,15 @@ add_executable(build-and-bench-rnnlm.x src/build-and-bench-rnnlm.cpp)
 add_executable(build-hyblm.x src/build-hyblm.cpp)
 add_executable(bench-hyblm.x src/bench-hyblm.cpp)
 
-add_executable(precompute-ngrams.x src/precompute-ngrams.cpp)
-target_link_libraries(precompute-ngrams.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
 
 if(CUDA_DYNET)
-target_link_libraries(build-and-bench-rnnlm.x sdsl pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
+target_link_libraries(build-and-bench-rnnlm.x sdsl prange pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
 target_link_libraries(build-and-bench-cstlm.x sdsl prange pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
-target_link_libraries(build-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
-target_link_libraries(bench-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
+target_link_libraries(build-hyblm.x sdsl prange pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
+target_link_libraries(bench-hyblm.x sdsl prange pthread divsufsort divsufsort64 cilkrts gdynet dynetcuda cublas)
 else()
-target_link_libraries(build-and-bench-cstlm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
-target_link_libraries(build-and-bench-rnnlm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
-target_link_libraries(build-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
-target_link_libraries(bench-hyblm.x sdsl pthread divsufsort divsufsort64 cilkrts dynet)
+target_link_libraries(build-and-bench-cstlm.x prange sdsl pthread divsufsort divsufsort64 cilkrts dynet)
+target_link_libraries(build-and-bench-rnnlm.x prange sdsl pthread divsufsort divsufsort64 cilkrts dynet)
+target_link_libraries(build-hyblm.x prange sdsl pthread divsufsort divsufsort64 cilkrts dynet)
+target_link_libraries(bench-hyblm.x prange sdsl pthread divsufsort divsufsort64 cilkrts dynet)
 endif()
